<resources>
    <string name="app_name">Giserap</string>
    <string name="github_user_app">Github User App</string>
    <string name="username">Username</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="back">Back</string>
    <string name="search_username">Search Username</string>
    <string name="hasil_pencarian">Search Result :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="list_favorite">List Favorite :</string>
    <string name="alarm_notification">Alarm Notification</string>
    <string name="off">Off</string>
    <string name="on">On</string>

</resources>
