<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">
    <LinearLayout
        android:id="@+id/intentMainActivity"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:tint="@color/colorPrimaryDark"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:text="@string/back"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:text="Setting"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/alarm_notification"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/colorMatte"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnOffAlarm"
                        android:text="@string/off"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btnOnAlarm"
                        android:text="@string/on"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:background="@android:color/darker_gray"
                android:alpha="0.5"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>