<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailUserActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.intrusoft.library.FrissonView
                android:id="@+id/imageDetailUserBackground"
                app:tintColor="#B32EBF91"
                app:scaleType="centerCrop"
                app:tideCount="3"
                app:tideHeight="50dp"
                app:gradientType="linear"
                app:gradient_startColor="#B38360C3"
                app:gradient_endColor="#B32EBF91"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <LinearLayout
                android:id="@+id/intentMainActivity"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:tint="@color/colorWhite"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:text="@string/back"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageDetailUserProfile"
                    tools:src="@drawable/user1"
                    android:layout_width="104dp"
                    android:layout_height="104dp"/>
                <TextView
                    android:id="@+id/tvDetailUserName"
                    tools:text="Jack Handstone"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="22sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvDetailUserCompany"
                    tools:text="Google Inc."
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </FrameLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvDetailUserUsername"
            android:textColor="@color/colorPrimary"
            tools:text="jachandstone"
            android:layout_marginTop="-5dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_location_on_black_24dp"
                android:tint="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:id="@+id/tvDetailUserLocation"
                android:textColor="@color/colorPrimary"
                tools:text="Norwegia"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <GridLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/repository"
                        android:fontFamily="@font/poppins_light"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvDetailUserRepo"
                        tools:text="999"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/follower"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_light"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvDetailUserFollower"
                        tools:text="999"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/following"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_light"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvDetailUserFollowing"
                        tools:text="999"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </FrameLayout>
        </GridLayout>
    </LinearLayout>
</ScrollView>